# RastreadorSalud

./: AddRecordDialog.ui.ui  CMakeLists.txt  LoginDiaglo.cpp  README.md  addrecorddialog.cpp  addrecorddialog.h  addrecorddialog.ui  addrecorddialog.ui.autosave  csvexporter.cpp  csvexporter.h  databasemanager.cpp  databasemanager.h  healthanalyzer.cpp  healthanalyzer.h  healthrecord.cpp  healthrecord.h  logindialog.cpp  logindialog.h  logindialog.ui  logindialog.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  user.cpp  user.h
